fixing paid search header z-index and padding issue when scrolling - switched to outer margins instead

--- a/src/public/sass/layout/_paid-search-header.scss
+++ b/src/public/sass/layout/_paid-search-header.scss
@@ -6,7 +6,6 @@
     margin-left: auto;
     margin-right: auto;
     max-width: $page-max-width;
-    padding: 0 5%;
     width: 100%;
 
     &.is-fixed {
@@ -114,6 +113,7 @@
         }
         &--velux {
             display: none;
+            margin-right: 5%;
 
             .velux-logo {
                 height: $ps-masthead-height;
@@ -139,6 +139,7 @@
         display: none;
         height: $ps-masthead-height;
         float: left;
+        margin-left: 5%;
         padding: 1% 0;
 
         .brand {
